# corsairmi-rs

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
examples/: async.rs  basic.rs  list.rs
src/: aio.rs  cmd.rs  lib.rs
