[package]
name = "corsairmi"
version = "0.4.0"  # remember to update html_root_url
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
repository = "https://github.com/newAM/corsairmi-rs"
license = "MIT"
description = "Read data from Corsair RMi and HXi series power supplies."
readme = "README.md"
keywords = ["corsair", "power-supply"]
categories = ["hardware-support"]
homepage = "https://github.com/newAM/corsairmi-rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features =  ["setupapi"]

# [target.'cfg(windows)'.dependencies]
# windows = "0.2.1"

# [target.'cfg(windows)'.build-dependencies]
# windows = "0.2.1"

[dependencies.tokio]
version = "1"
features = ["fs"]
optional = true

[dev-dependencies]
version-sync = "0.9"

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
