[package]
name = "corsairmi"
version = "0.4.0"  # remember to update html_root_url
edition = "2018"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
repository = "https://github.com/newAM/corsairmi-rs"
license = "MIT"
description = "Read data from Corsair RMi and HXi series power supplies."
readme = "README.md"
keywords = ["corsair", "power-supply"]
categories = ["hardware-support"]
homepage = "https://github.com/newAM/corsairmi-rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"

[dependencies.tokio]
version = "1"
features = ["fs"]
optional = true

[dev-dependencies]
version-sync = "0.9"

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
