[package]
name = "corsairmi"
version = "2.0.0+deprecated"
edition = "2021"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/corsairmi-rs"
license = "MIT"
description = "Read data from Corsair RMi and HXi series power supplies."
readme = "README.md"
keywords = ["corsair", "power-supply"]
categories = ["hardware-support"]
homepage = "https://github.com/newAM/corsairmi-rs"

[dependencies]
libc = "0.2"

[dependencies.tokio]
version = "1"
features = ["fs", "io-util"]
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
